--- a/css/responsive.css
+++ b/css/responsive.css
@@ -137,6 +137,34 @@
     .popular-row, .blog-row{
         grid-template-columns: repeat(3, 1fr);
     }
+    .spotify-container {
+        position: relative;
+        width: 49%;
+        max-width: 644px;
+        margin: auto;
+        padding-top: 30%; /* tinggi proporsional */
+        border-radius: 12px;
+        overflow: hidden;
+      }
+      
+      .spotify-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+        border-radius: 12px;
+      }
+      
+      /* buat HP responsive */
+      @media (max-width: 768px) {
+        .spotify-container {
+          width: 90%; /* hampir full width di HP */
+          padding-top: 56.25%; /* tinggi proporsional di HP */
+        }
+      }
+      
     .about-row{
         -webkit-box-align: center;
             -ms-flex-align: center;
