--- a/css/style.css
+++ b/css/style.css
@@ -599,9 +599,22 @@ header.header-sm{
     width: 80%;
     max-width: 800px;
 }
-#img-mdoal img{
+#img-modal img{
     max-width: 100%;
     height: 100%;
+}
+#img-modal video {
+    max-height: 90vh;      /* biar tinggi hampir penuh layar */
+    max-width: 90vw;       /* lebar tetap fleksibel tapi ga terlalu lebar */
+    width: auto;           /* biar ga dipaksa melebar */
+    height: auto;
+    object-fit: contain;   /* biar proporsi video asli terjaga */
+    border-radius: 10px;
+    display: block;
+    margin: 0 auto;        /* biar horizontal center */
+    position: relative;
+    top: 50%;
+    
 }
 #img-modal-box button{
     position: absolute;
@@ -835,3 +848,9 @@ header.header-sm{
     max-width: 495px; /* batas lebar biar rapi */
     margin: 0 auto;   /* biar tetap di tengah */
 }
+
+  
+  
+  
+  
+ 
