--- a/css/responsive.css
+++ b/css/responsive.css
@@ -216,4 +216,18 @@
     .featured-row, .services-row{
         grid-template-columns: repeat(3, 1fr);
     }
-} 
+}
+
+@media (max-width: 768px) {
+    .video-wrapper {
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+    }
+    
+    .video-wrapper video {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+}
