--- a/css/responsive.css
+++ b/css/responsive.css
@@ -219,15 +219,25 @@
 }
 
 @media (max-width: 768px) {
+
+    #video {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+  
     .video-wrapper {
-        width: 100%;
-        height: auto;
-        overflow: hidden;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
     }
-    
+  
     .video-wrapper video {
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
+      width: 100vw !important;
+      height: 100vh !important;
+      object-fit: cover !important;
+      display: block;
     }
-}
+  
+  }
+  
