--- a/css/responsive.css
+++ b/css/responsive.css
@@ -219,23 +219,15 @@
 }
 
 @media (max-width: 768px) {
-
     .video-wrapper {
-      flex: none !important;
+      height: 100vh !important;   /* GANTI tingginya */
       width: 100vw !important;
-      height: 100vh !important;
-      padding: 0 !important;
-      margin: 0 !important;
-      overflow: hidden !important;
-      display: block !important;
     }
   
     .video-wrapper video {
-      width: 100vw !important;
       height: 100vh !important;
+      width: 100vw !important;
       object-fit: cover !important;
-      display: block !important;
     }
-  
   }
   
