--- a/css/responsive.css
+++ b/css/responsive.css
@@ -245,4 +245,20 @@
     }
   
   }
+  @media (max-width: 768px) {
+
+    .spotify-container {
+      width: 100% !important;
+      max-width: 450px !important;
+      margin: 0 auto !important;
+      padding: 0 !important;
+    }
   
+    .spotify-container iframe {
+      width: 100% !important;
+      height: 200px !important; /* kamu boleh gedein 220-260 */
+      border-radius: 12px;
+    }
+  
+  }
+    
