--- a/css/responsive.css
+++ b/css/responsive.css
@@ -281,14 +281,9 @@
 }
 @media (max-width: 768px) {
     #decor .container {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr); /* 5 item per baris */
       gap: 8px;
-    }
-  
-    #decor .item {
-      flex: 1 1 calc(20% - 8px); /* 5 item per baris di HP */
-      box-sizing: border-box;
     }
   }
   
